fix side overflow issue

--- a/assets/stylesheets/app.scss
+++ b/assets/stylesheets/app.scss
@@ -2,7 +2,6 @@
 *= require font-awesome
 *= require animate
 *= require jquery-ui
-*= require media_queries
 *= require testimonials
 *= require about
 *= require services
@@ -14,7 +13,11 @@
 @import "bootstrap";
 @import url(https://fonts.googleapis.com/css?family=Crafty+Girls|Montserrat);
 
+// body * { border: 1px solid red; }
+  
+
 body {
+  // margin: 30px;
   color: #544a42;
   background-color: #faf0e8;
 }
@@ -106,4 +109,50 @@ a {
 
 #siteContent {
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 394px) {
+  .logo {
+    font-size: 3.75em;
+  }
+  .subtitle {
+    font-size: 1.75em;
+  }
+  .tab-pane {
+    font-size: 1em;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  #navTabs li, .jumbotron {
+    visibility: hidden;
+    height: 60px;
+  }
+  #testimony {
+    height: 75%;
+  }
+}
+
+@media (min-width: 661px) {
+  .navbar {
+    visibility: hidden;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #logopic {
+    max-height: 300px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 920px) {
+  .logo {
+    font-size: 3em;
+  }
+}
+
+@media (min-width: 921px) and (max-width: 1148px) {
+  .logo {
+    font-size: 3.75em;
+  }
 }
